Tue, 22 Apr 2008 21:57:31 +0200 <thp@perli.net>
Typo from previous commit

	* src/gpodder/libpodcasts.py: Fix typo

Tue, 22 Apr 2008 21:54:01 +0200 <thp@perli.net>
Diverse changes, code clean-ups and other small annoyances

	* src/gpodder/config.py: Make sure we can load a default set of
	configuration options, even if we are in CLI mode
	* src/gpodder/download.py: Don't display a traceback when logging a
	cancelled download
	* src/gpodder/gui.py: Add Doug Hellmann to contributors/coders list in
	the about dialog (Doug Hellmann has done the feed cache code); do not
	center the gPodderEpisode dialog on the treeAvailable widget (this
	looks ugly ;)
	* src/gpodder/libpodcasts.py: Clean up import statements; Make sure we
	always have icon names, even in CLI mode; Remove "is_music_channel"
	property of podcastChannel (not needed anymore); 

Tue, 22 Apr 2008 21:15:40 +0200 <thp@perli.net>
Python code fixup: Compare "None" with "is not" instead of "!="

	* src/gpodder/config.py: "!= None" => "is not None"
	* src/gpodder/download.py: "!= None" => "is not None"
	* src/gpodder/gui.py: "!= None" => "is not None"
	* src/gpodder/libconverter.py: "!= None" => "is not None"
	* src/gpodder/libgpodder.py: "!= None" => "is not None"
	* src/gpodder/libpodcasts.py: "!= None" => "is not None"
	* src/gpodder/services.py: "!= None" => "is not None"
	* src/gpodder/util.py: "!= None" => "is not None"

Tue, 22 Apr 2008 20:30:28 +0200 <thp@perli.net>
Non-modal feed cache updates

	* data/gpodder.glade: Feed cache update UI changes
	* src/gpodder/gui.py: Fix problem with maemo window showing all
	widgets on start; feed cache update changes; update list of
	contributor (bug reporter for the cancel/skip button feature request
	* src/gpodder/libpodcasts.py: Support cancelling a running feed cache
	update by switching to offline mode when the cancel button is pressed
	in load_channels(); idea by Paul Elliot, Pieter De Decker, Jürgen