@@ -82,7 +82,8 @@ app_authors = [
     'Florian Richter', 'FriedBunny', 'Gerrit Sangel', 'Götz Waschk',
     'Haim Roitgrund', 'Hex', 'Holger Bauer', 'Holger Leskien', 'Jens Thiele',
     'Jérôme Chabod', 'Jessica Henline', 'Joel Calado', 'John Ferguson', 
-    'José Luis Fustel', 'Joseph Bleau', 'Julio Acuña', 'Jürgen Schinker',
+    'José Luis Fustel', 'Joseph Bleau', 'Julio Acuña', 'Junio C Hamano',
+    'Jürgen Schinker',
     'Konstantin Ryabitsev', 'Leonid Ponomarev', 'Mark Alford', 'Michael Salim', 
     'Mika Leppinen', 'Mike Coulson', 'Mykola Nikishov', 'narf at inode.at',
     'Nick L.', 'Nicolas Quienot', 'Ondrej Vesely', 
